<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/login_page">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_login_page"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:id="@+id/password_login_page" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:layout_marginTop="16dp"
            android:id="@+id/login_btn_login_page"
            android:background="@android:color/transparent"
            android:textColorHint="@color/teal_700"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/or"
           android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="14sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in"
            android:id="@+id/signin_btn_login_page"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            android:textColorHint="@color/teal_700"
            android:textStyle="bold"/>





    </LinearLayout>

</LinearLayout>